tests/neg/i11118.scala
// https://github.com/lampepfl/dotty/issues/11118
val (a,b) = (1,2,3) // error // warning
